--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -24,3 +24,39 @@
 .item-price {
     color: green;
 }
+
+.basket-img {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
+
+.item-div {
+    border: 1px solid #ddd;
+}
+
+
+
+
+
+.dialog {
+    display: none; /* Hidden by default */
+    justify-content: center; /* Center horizontally */
+    align-items: center;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.5); /* Black w/ opacity */
+}
+
+.dialog-box {
+    background-color: #2B363E;
+    margin: 15% auto;
+    padding: 20px;
+    border: 4px solid #D8822A;
+    border-radius: 0px;
+}
