--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -1,3 +1,4 @@
+
 .item-grid {
     display: flex;
     flex-wrap: wrap;
@@ -39,7 +40,7 @@
 
 
 
-.dialog {
+#dialog {
     display: none; /* Hidden by default */
     justify-content: center; /* Center horizontally */
     align-items: center;
@@ -53,10 +54,9 @@
     background-color: rgba(0, 0, 0, 0.5); /* Black w/ opacity */
 }
 
-.dialog-box {
-    background-color: #2B363E;
+#dialog-box {
+    background-color: #088ceb;
     margin: 15% auto;
     padding: 20px;
-    border: 4px solid #D8822A;
     border-radius: 0px;
 }
