--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -60,3 +60,20 @@
     padding: 20px;
     border-radius: 0px;
 }
+
+.order {
+    border: 1px solid #ddd;
+    margin-bottom: 1em;
+    padding: 1em;
+    border-radius: 8px;
+}
+
+.order-header {
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.order-details {
+    padding: 0.5em 0 0 1em;
+}
