began adding css styles to pages, adjusted returned error messages for login function to implement a more friendly UI

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -1,20 +1,102 @@
+body {
+    background-color: #6AB28B;
+    margin: 0px;
+    padding: 0px;
+}
+
+button, .form-submit {
+    padding: 4px 14px 4px 14px;
+    font-size: medium;
+    font-weight: 600;
+    background-color: #00CE5D;
+    border: 1px solid black;
+    border-radius: 3px;
+}
+
+button:hover, .form-submit:hover {
+    cursor: pointer;
+    background-color: #00FF73;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;;
+}
+
+header img {
+    width: 30%;
+    max-width: 300px;
+}
+
+header h4 {
+    font-size: larger;
+    margin: 5px;
+}
+
+nav {
+    background-color: #00FF73;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    padding: 15px;
+    margin: 5px 0px 10px 0px;
+    gap: clamp(10px, 15%, 30px);
+    justify-content: center;
+}
+
+.nav-link {
+    font-size: large;
+    font-weight: 600;
+    margin: 5px;
+}
+
+.nav-link:not(.selected):hover {
+    background-color: bisque;
+    cursor: pointer;
+}
+
+section {
+    margin: 10px;
+    padding: 10px;
+}
+section h2 {
+    margin: 0px;
+    text-align: center;
+}
+
+#dropdown-div {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#dropdown-menu {
+    width: 250px;
+    font-size: large;
+    font-weight: 600;
+}
 
 .item-grid {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
 }
 
 .item-card {
-    border: 1px solid #ddd;
+    border: 1px solid grey;
     padding: 10px;
-    width: 150px;
+    width: 190px;
     text-align: center;
+    background-color: #C0FF8F;
 }
 
 .item-image {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
 }
 
@@ -23,8 +105,94 @@
 }
 
 .item-price {
-    color: green;
+    font-size: medium;
+    font-weight: 500;
 }
+
+.add-to-basket {
+    padding: 3px 11px 3px 11px;
+    font-size: medium;
+    font-weight: 600;
+    background-color: #00CE5D;
+    border: 1px solid black;
+    border-radius: 3px;
+}
+
+.add-to-basket:hover {
+    cursor: pointer;
+    background-color: #00FF73;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-fields {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
+    background-color: #C0FF8F;
+    margin-bottom: 15px;
+    width: 45%;
+    max-width: 500px;
+}
+
+.form-fields label {
+    font-size: large;
+    font-weight: 600;
+}
+
+.form-fields input, #captcha {
+    font-size: medium;
+    font-weight: 500;
+}
+
+.error-message {
+    color: red;
+    font-size: medium;
+    font-weight: 500;
+    margin: 3px 0px 3px 0px;
+    padding: 0px;
+}
+
+#captcha-div {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+}
+
+#captcha-image {
+    width: 200px;
+    height: auto;
+    object-fit: cover;
+}
+
+#captcha {
+    width: 100px;
+}
+
+#captcha-button {
+    font-size: small;
+    margin: 3px 0px 10px 0px;
+}
+
+.form-submit {
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+
+
+
+
+
 
 .basket-img {
     width: 50px;
