--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -323,10 +323,13 @@ form {
 }
 
 .order {
-    border: 1px solid #ddd;
+    border: 1px solid black;
+    border-radius: 3px;
+    width: 45%;
     margin-bottom: 1em;
     padding: 1em;
-    border-radius: 8px;
+    justify-self: center;
+    background-color: #C0FF8F;
 }
 
 .order-header {
@@ -335,6 +338,17 @@ form {
     cursor: pointer;
 }
 
+.order-header h3, .order-header h5 {
+    margin: 0px;
+    padding: 5px;
+}
+
 .order-details {
     padding: 0.5em 0 0 1em;
+    transition: max-height 0.5s ease;
+}
+
+.toggle-order {
+    font-size: 16px;
+    transition: transform 0.3s ease;
 }
